fixed alignment issue with the deca activity page

--- a/activities-page.css
+++ b/activities-page.css
@@ -1,5 +1,5 @@
 .activities-page{
-    height: 1500px;
+    height: 1800px;
     background-color: black;
     opacity: 0.88;
     display: flex;
